--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,33 @@
-<h1>Your are on the Index page</h1>
 
-<div><%= link_to "Create a new cocktail", new_cocktail_path %></div>
+<div class=container>
+  <%= simple_form_for :search, url: cocktails_path, method: :get do |f| %>
+    <div class="search-form-control form-group">
+      <input  class="form-control string required" type="text" <%= :name %> id="search_query" />
+      <button name="button" type="submit" class="btn btn-flat">
+        <i class="fas fa-search"></i> Search
+      </button>
+    </div>
+  <% end %>
+
+
+  <div><%= link_to "Create a new cocktail", new_cocktail_path, :class =>"btn btn-lrg btn-primary" %></div>
+
+
+
+
+
+  <% @cocktails.each do |cocktail| %>
+    <div class="card-product">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg">
+      <div class="card-product-infos">
+        <h2><%= cocktail.name %></h2>
+        <%= link_to "More details", cocktail %>
+      </div>
+    </div>
+  <% end %>
 
 <div>
-  <% @cocktails.each do |cocktail| %>
-    <h2><%= cocktail.name %></h2>
-    <%= link_to "More details", cocktail %>
-  <% end %>
+  <li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li><li>lorem</li>
+</div>
+
 </div>
