--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,4 +3,11 @@
 <%= link_to "back", cocktails_path %>
 <%= link_to "Add doses", new_cocktail_dose_path(@cocktail) %>
 
+<ul>
+  <% @cocktail.doses.each do |dose| %>
+    <li><%= dose.description %> -  <%= dose.ingredient.name %></li>
 
+    <%= link_to "delete", dose_path(dose), method: :delete %>
+
+  <% end  %>
+</ul>
