--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -3,6 +3,9 @@
 
 
 <%= simple_form_for [@cocktail, @dose] do |f| %>
+
+  <%= f.association :ingredient %>
+
   <%= f.input :description %>
   <%= f.submit "add a description", class: "btn btn-primary" %>
 <% end %>
