--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,13 @@
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
+
 
 
     <%= yield %>
+
+    <%= render "shared/footer" %>
 
     <%= javascript_include_tag "application" %> <!-- from app/assets/javascripts/application.js -->
   <%= javascript_pack_tag "application" %>
